Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/7085024/T7085024.out
T7085024.java:11:32: compiler.err.cant.resolve.location: kindname.class, NonExistentClass, , , (compiler.misc.location: kindname.class, T7085024, null)
1 error
